[gd_scene format=3 uid="uid://cxiyc3rxgkhbj"]

[ext_resource type="Script" uid="uid://ii4b340kb5g5" path="res://scripts/cambiar_password.gd" id="1_password"]
[ext_resource type="Texture2D" uid="uid://escqttos86j4" path="res://assets/images/users/avatar-default.png" id="2_hbtii"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
bg_color = Color(0.12549, 0.290196, 0.533333, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.219608, 0.458824, 0.792157, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_label_info"]
content_margin_left = 10.0
content_margin_top = 8.0
content_margin_right = 10.0
content_margin_bottom = 8.0
bg_color = Color(0.9, 0.95, 1, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.7, 0.8, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lineedit"]
content_margin_left = 10.0
content_margin_top = 8.0
content_margin_right = 40.0
content_margin_bottom = 8.0
bg_color = Color(0.35, 0.35, 0.35, 0.79607844)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.7, 0.7, 0.7, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_verde"]
content_margin_left = 20.0
content_margin_top = 12.0
content_margin_right = 20.0
content_margin_bottom = 12.0
bg_color = Color(0.2, 0.6, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.1, 0.4, 0.1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_verde_hover"]
content_margin_left = 20.0
content_margin_top = 12.0
content_margin_right = 20.0
content_margin_bottom = 12.0
bg_color = Color(0.3, 0.7, 0.3, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.5, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_boton"]
content_margin_left = 20.0
content_margin_top = 12.0
content_margin_right = 20.0
content_margin_bottom = 12.0
bg_color = Color(0.188235, 0.439216, 0.803922, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.12549, 0.34902, 0.67451, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_boton_cancelar"]
content_margin_left = 20.0
content_margin_top = 12.0
content_margin_right = 20.0
content_margin_bottom = 12.0
bg_color = Color(0.8, 0.2, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.1, 0.1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_boton_cancelar_hover"]
content_margin_left = 20.0
content_margin_top = 12.0
content_margin_right = 20.0
content_margin_bottom = 12.0
bg_color = Color(0.9, 0.3, 0.3, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7, 0.2, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="CambiarPassword" type="Control" unique_id=1892700493]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_password")

[node name="Fondo" type="ColorRect" parent="." unique_id=2013449353]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.92, 0.94, 0.96, 1)

[node name="Panel" type="Panel" parent="." unique_id=938756374]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel" unique_id=650095535]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer" unique_id=486630863]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Header" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=281818265]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Icon" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/Header" unique_id=2087460911]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_hbtii")
expand_mode = 1
stretch_mode = 6

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer/Header" unique_id=1138979720]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Cambiar Contrase√±a"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Panel/MarginContainer/VBoxContainer" unique_id=1437106286]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3

[node name="InfoLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer" unique_id=932746745]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.3, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_label_info")
text = "Cambie su contrase√±a de acceso al sistema"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="Panel/MarginContainer/VBoxContainer" unique_id=1701833042]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3

[node name="CurrentPasswordContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=439667058]
layout_mode = 2
size_flags_horizontal = 3

[node name="CurrentPasswordLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/CurrentPasswordContainer" unique_id=2091631556]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Contrase√±a Actual:"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/CurrentPasswordContainer" unique_id=1409912375]
layout_mode = 2
size_flags_horizontal = 3

[node name="CurrentPassword" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/CurrentPasswordContainer/HBoxContainer" unique_id=1409912376]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_lineedit")
placeholder_text = "Ingrese su contrase√±a actual"
secret = true

[node name="BtnShowCurrent" type="Button" parent="Panel/MarginContainer/VBoxContainer/CurrentPasswordContainer/HBoxContainer" unique_id=1409912377]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty")
theme_override_styles/pressed = SubResource("StyleBoxEmpty")
theme_override_styles/hover = SubResource("StyleBoxEmpty")
text = "üëÅ"
flat = true

[node name="Spacer3" type="Control" parent="Panel/MarginContainer/VBoxContainer" unique_id=670255814]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3

[node name="NewPasswordContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=55850561]
layout_mode = 2
size_flags_horizontal = 3

[node name="NewPasswordLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/NewPasswordContainer" unique_id=984931784]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Nueva Contrase√±a:"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/NewPasswordContainer" unique_id=996156875]
layout_mode = 2
size_flags_horizontal = 3

[node name="NewPassword" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/NewPasswordContainer/HBoxContainer2" unique_id=996156876]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_lineedit")
placeholder_text = "Ingrese nueva contrase√±a"
secret = true

[node name="BtnShowNew" type="Button" parent="Panel/MarginContainer/VBoxContainer/NewPasswordContainer/HBoxContainer2" unique_id=996156877]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty")
theme_override_styles/pressed = SubResource("StyleBoxEmpty")
theme_override_styles/hover = SubResource("StyleBoxEmpty")
text = "üëÅ"
flat = true

[node name="PasswordRequirements" type="Label" parent="Panel/MarginContainer/VBoxContainer/NewPasswordContainer" unique_id=669104390]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 12
text = "M√≠nimo 8 caracteres, incluir may√∫sculas, min√∫sculas y n√∫meros"

[node name="Spacer4" type="Control" parent="Panel/MarginContainer/VBoxContainer" unique_id=2065479530]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3

[node name="ConfirmPasswordContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=2044543236]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConfirmPasswordLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ConfirmPasswordContainer" unique_id=755612654]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Confirmar Nueva Contrase√±a:"

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ConfirmPasswordContainer" unique_id=1179903312]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConfirmPassword" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/ConfirmPasswordContainer/HBoxContainer3" unique_id=1179903313]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_lineedit")
placeholder_text = "Repita la nueva contrase√±a"
secret = true

[node name="BtnShowConfirm" type="Button" parent="Panel/MarginContainer/VBoxContainer/ConfirmPasswordContainer/HBoxContainer3" unique_id=1179903314]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty")
theme_override_styles/pressed = SubResource("StyleBoxEmpty")
theme_override_styles/hover = SubResource("StyleBoxEmpty")
text = "üëÅ"
flat = true

[node name="Spacer5" type="Control" parent="Panel/MarginContainer/VBoxContainer" unique_id=1235258867]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3

[node name="ModoSeguroContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=1446142800]
layout_mode = 2
size_flags_horizontal = 3

[node name="ModoSeguroToggle" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/ModoSeguroContainer" unique_id=1446142801]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
button_pressed = true
text = "üîí Modo seguro (rechazar contrase√±as d√©biles)"

[node name="PasswordStrength" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=1972855061]
layout_mode = 2
size_flags_horizontal = 3

[node name="StrengthLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/PasswordStrength" unique_id=1554630643]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Fortaleza de la contrase√±a:"

[node name="StrengthBarContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/PasswordStrength" unique_id=527948078]
layout_mode = 2
size_flags_horizontal = 3

[node name="StrengthBar" type="ProgressBar" parent="Panel/MarginContainer/VBoxContainer/PasswordStrength/StrengthBarContainer" unique_id=1987390413]
layout_mode = 2
size_flags_horizontal = 3

[node name="StrengthText" type="Label" parent="Panel/MarginContainer/VBoxContainer/PasswordStrength/StrengthBarContainer" unique_id=1667680392]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "D√©bil"

[node name="StatusMessage" type="Label" parent="Panel/MarginContainer/VBoxContainer" unique_id=192837465]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.3, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 13
theme_override_styles/normal = SubResource("StyleBoxFlat_label_info")
text = "Complete todos los campos para cambiar la contrase√±a"
horizontal_alignment = 1

[node name="Spacer7" type="Control" parent="Panel/MarginContainer/VBoxContainer" unique_id=1654327890]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionButtons" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer" unique_id=1070539447]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="BtnCambiar" type="Button" parent="Panel/MarginContainer/VBoxContainer/ActionButtons" unique_id=1436260904]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_verde")
theme_override_styles/pressed = SubResource("StyleBoxFlat_verde_hover")
theme_override_styles/hover = SubResource("StyleBoxFlat_verde_hover")
theme_override_styles/disabled = SubResource("StyleBoxFlat_boton")
text = "üîê Cambiar Contrase√±a"

[node name="Spacer8" type="Control" parent="Panel/MarginContainer/VBoxContainer/ActionButtons" unique_id=987654321]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="BtnCancelar" type="Button" parent="Panel/MarginContainer/VBoxContainer/ActionButtons" unique_id=1436260905]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_boton_cancelar")
theme_override_styles/pressed = SubResource("StyleBoxFlat_boton_cancelar_hover")
theme_override_styles/hover = SubResource("StyleBoxFlat_boton_cancelar_hover")
text = "‚ùå Cancelar"

[node name="SuccessDialog" type="AcceptDialog" parent="." unique_id=1238397273]
title = "‚úÖ Contrase√±a Cambiada"
ok_button_text = "Aceptar"
dialog_text = "¬°Contrase√±a cambiada exitosamente!"

[node name="ErrorDialog" type="AcceptDialog" parent="." unique_id=933151908]
title = "‚ùå Error"
ok_button_text = "Aceptar"
dialog_text = "Ha ocurrido un error"
